--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx", version = "21.3.0" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-
+google-maps = { module = "com.google.android.gms:play-services-maps", version = "18.1.0" }
+google-location = { module = "com.google.android.gms:play-services-location", version = "21.0.1" }
 
 
 [plugins]
