--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,28 +16,32 @@
         android:theme="@style/Theme.TimeCatcher"
         tools:targetApi="31">
 
+        <!-- Clave API de Google Maps -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDURw7OTNTf2sCRshsu2z1gdZSX4ptlUXc" />
 
-        <activity android:name=".App" />
-
-        <activity android:name=".ui.login.LoginActivity"
-            android:exported="true">
+        <!-- LoginActivity debe ser la actividad principal -->
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TimeCatcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <activity android:name="com.example.timecatcher.ui.main.MainActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TimeCatcher">
-
         </activity>
 
+        <activity android:name=".App" />
     </application>
 
 </manifest>
