--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 constraintlayout = "2.2.0"
 appcompat = "1.7.0"
+coroutines = "1.6.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,22 +28,17 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx", version = "21.3.0" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 google-maps = { module = "com.google.android.gms:play-services-maps", version = "18.1.0" }
 google-location = { module = "com.google.android.gms:play-services-location", version = "21.0.1" }
 
-room-runtime = { module = "androidx.room:room-runtime", version = "2.5.1" }
-room-compiler = { module = "androidx.room:room-compiler", version = "2.5.1" }
-room-ktx = { module = "androidx.room:room-ktx", version = "2.5.1" }
-
+coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version = "4.3.15" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version = "1.9.10" }
-
 
 
