Uso practico en la app (BD Local y Backend)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         </activity>
 
         <activity android:name="com.example.timecatcher.ui.main.MainActivity" />
+        <activity android:name="com.example.timecatcher.ui.login.RegisterActivity" />
 
         <activity
             android:name=".MainActivity"
